# Vigil-ai

./: docker-compose.yml  main.py  pyproject.toml
anomaly_detector/: Dockerfile  README.md  main.py  models.py  pyproject.toml
anomaly_trainer/: Dockerfile  README.md  main.py  models.py  pyproject.toml
artifacts/: README.md
artifacts/datasets/: .gitkeep
artifacts/datasets/anomaly/anomaly-metrics/: latest.json
artifacts/datasets/anomaly/anomaly-metrics/20260408T100425Z/: dataset.csv  dataset.json  manifest.json
artifacts/datasets/anomaly/anomaly-metrics/20260408T101918Z/: dataset.csv  dataset.json  manifest.json
artifacts/datasets/anomaly/anomaly-metrics/20260408T101935Z/: dataset.csv  dataset.json  manifest.json
artifacts/datasets/anomaly/anomaly-metrics/20260408T102531Z/: dataset.csv  dataset.json  manifest.json
artifacts/datasets/anomaly/anomaly-metrics/20260408T102532Z/: dataset.csv  dataset.json  manifest.json
artifacts/models/: .gitkeep
artifacts/models/anomaly/isolation-forest/: latest.json
artifacts/registry/: .gitkeep
artifacts/registry/anomaly/: retrain-policy.json
artifacts/registry/anomaly/isolation-forest/: latest.json
gateway/: Dockerfile  main.py  models.py  pyproject.toml
inference_service/: Dockerfile  main.py  models.py  pyproject.toml
k8s/: build-logbook.md  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: grafana-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
(+27 files in other folders)
