[project]
name = "anomaly-trainer"
version = "0.1.0"
description = "Training and dataset versioning service for Vigil AI anomaly detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "numpy>=2.3.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.44.0",
]
