[project]
name = "inference-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
